fix plot_table for @@FIT on RATIO using binomial errors

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1413,6 +1413,7 @@ etc ...
 
 \begin{Verbatim}[frame=single]
   SIMLIB_MSKOPT:  nnn     # bit-mask of options (see below)
+  SIMLIB_SURVEY:  xyz     # override survey name in SIMLIB file; e.g., rename survey to be LOWZ
   SIMLIB_MINOBS:  nnn     # require at least this many obs per LIBID
   SIMLIB_MAXOBS:  nnn     # require fewer than this many obs per LIBID
   SIMLIB_IDSTART: nnn     # start at LIBID nnn
