fix harmless index bug in sntools_dataformat_fits.c

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -14721,6 +14721,7 @@ For simulations, {\tt SIM\_FLAM} is automatically appended as last column.
     OPT_REFORMAT_SPECTRA = 1 ! 3-column text file: lam Flam Flamerr
     OPT_REFORMAT_SPECTRA = 2 ! write FLUX instead of FLam for astrodash
     OPT_REFORMAT_SPECTRA = 4 ! write 'lam Flam Flamerr' using keyed format
+    OPT_REFORMAT_SPECTRA = 8 ! specialized output for SNID-SAGE code
 \end{verbatim}
 
 
